Rollbackea cambio a jdk9 en travis y re-escribe features para java 1.8